--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-org.gradle.jvmargs=-Xmx3g
+org.gradle.jvmargs=-Xmx3g --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 org.gradle.caching=true
 org.gradle.vfs.watch=true
