--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
-org.gradle.jvmargs=-Xmx3g --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+org.gradle.jvmargs=-Xmx3g --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
 org.gradle.caching=true
 org.gradle.vfs.watch=true
+org.gradle.configuration-cache=true
