--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -24,11 +24,14 @@ jobs:
     - uses: actions/checkout@v3
       with:
         persist-credentials: false
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: '17'
         distribution: 'temurin'
+
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
 
     - uses: actions/checkout@v3
       with:
@@ -36,24 +39,22 @@ jobs:
         persist-credentials: false
         path: build/maven
 
-    - name: Publish to local maven
+    - name: Publish to GitHub Packages
       uses: gradle/gradle-build-action@v2
       with:
-        arguments: publishLibraryPublicationToMavenRepository
+        arguments: publishReleasePublicationToMavenRepository
       env:
         GITHUB_RELEASE: ${{ github.event.release.tag_name }}
 
     - name: Pushes to maven repository
       run: |
         cd build/maven
-        git config --unset-all http.https://github.com/.extraheader
         git config --global user.name '${{ secrets.USER }}' 
         git config --global user.email '${{ secrets.EMAIL }}'
         git add --all
         git remote set-url origin https://${{ secrets.USER }}:${{ secrets.ACCESS_TOKEN }}@github.com/SelvinPL/maven.git
         git commit -m '[automated commit]'
         git push
-
     - name: Publish to GitHub Packages
       uses: gradle/gradle-build-action@v2
       with:
